<resources>
    //Text
    <string name="app_name">App de Recarga</string>

    //Activity main
    <string name="string_saludo_text">¡ Bienvenido !</string>
    <string name="string_usu_text">Ingrese usuario</string>
    <string name="string_usu_hint">Usuario</string>
    <string name="string_clave_text">Ingrese su clave</string>
    <string name="string_clave_hint">Clave</string>
    <string name="string_ingresar_btn">INGRESAR</string>
    <string name="string_registrar_">REGISTRAR</string>
    <string name="imagen_de_prueba">imagen</string>

    //Activity Menu Principal
    <string name="string_APP_DE_RECARGAS"> APP DE RECARGAS </string>
    <string name="string_Saldo_de_la_tarjeta"> Saldo de la tarjeta </string>
    <string name="string_saldo"> S/. 0.00 </string>
    <string name="string_Agregar_Targeta"> Agregar Tarjeta </string>
    <string name="string_Elegir_targeta"> Elegir tarjeta </string>
    <string name="string_Atras"> ATRAS </string>
    <string name="string_Operacion"> OPERACION </string>

    //Activity Registrar Usuario
    <string name="string_REGISTRARSE">REGISTRAR USUARIO</string>
    <string name="string_nombres_text">Ingrese sus nombres</string>
    <string name="string_nombres_hint">Nombres</string>
    <string name="string_apellidos_text">Ingrese sus apellidos</string>
    <string name="string_apellidos_hint">Apellidos</string>
    <string name="string_usuario_text">Cree su usuario</string>
    <string name="string_usuario_hint">Usuario</string>
    <string name="string_contraseña_text">Cree su contraseña</string>
    <string name="string_contraseña_hint">Contraseña</string>
    <string name="string_cancelar_btn">CANCELAR</string>
    <string name="string_registrar_btn">REGISTRAR</string>

    //Activity Registrar Tarjetas
    <string name="string_REGISTRAR_TARJETAS">REGISTRAR TARJETAS</string>
    <string name="string_Numero_tarjeta">Numero de tarjeta</string>
    <string name="string_Num_tarejeta">Tarjeta</string>
    <string name="string_Fecha_tarjeta">Mes/Año</string>
    <string name="string_Fecha_tarjeta_">Fecha</string>
    <string name="string_CSV">CVV</string>
    <string name="string_CSV_">cvv</string>
    <string name="string_CANCELAR_btn">CANCELAR</string>
    <string name="string_REGISTRARS_btn">REGISTRAR</string>

    //Activity Operacion Recarga
    <string name="string_RECARGAR">RECARGAR SALDO</string>
    <string name="string_Empresa">Seleccione la Empresa</string>
    <string name="string_Monto">Ingrese el Monto</string>
    <string name="string_Monto_">S/. 0.00</string>
    <string name="string_Atras_btn">ATRAS</string>
    <string name="string_Recargar_btn">RECARGAR</string>
    <string name="string_celular">Ingrese el numero de telefono</string>
    <string name="string_celular_">000 000 000</string>

</resources>